Fix bug where underline on superscripts was invisible

--- a/assets/scss/superscripts.scss
+++ b/assets/scss/superscripts.scss
@@ -3,6 +3,6 @@ sup {
 
   // Adjust link underline position.
   a {
-    background-position-y: 60%;
+    background-position-y: 70%;
   }
 }
